--- a/.travis.yml
+++ b/.travis.yml
@@ -6,13 +6,13 @@ matrix:
     - python: 3.7
       sudo: yes
       dist: xenial
-      env: API_LEVEL=TF1
+      env: API_LEVEL=TF2
 # command to install dependencies
 install:
   - if [[ "$API_LEVEL" == "TF2" ]]; then
-    pip install tf-nightly-2.0-preview;
-    else
     pip install tensorflow;
+    else
+    pip install tensorflow==1.14.0;
     fi
   - pip install -e .[test]
 # command to run tests
